# scholar-vault-tools

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LESSONS.md  README.md  TODO.md  VAULT_AGENTS_TEMPLATE.md  pyproject.toml  requirements-dev.txt
browser/: scholar_labs_json_exporter.js
docs/: advanced-command-reference.md  manual-self-improvement-runbook.md  obsidian-bases-acceptance.md
scholar_vault/: __init__.py  autopilot.py  bases.py  bibliography.py  bibtex.py  citations.py  cli.py  cli_autopilot.py  cli_bases.py  cli_common.py  cli_compile.py  cli_discovery.py  cli_labs_prompts.py  cli_migration.py  cli_obsidian.py  cli_projects.py  cli_queries.py  cli_schema.py  cli_self_improvement.py  cli_semantic.py  cli_skills.py  config.py  dashboards.py  diagnostics.py  digests.py  discovery.py  discovery_adapters.py  enrichment.py  evals.py  gui.py  gui_common.py  gui_pdf_import.py  gui_project_workspace.py  gui_skill_sync.py  gui_staging_match.py  importer.py  labs_prompts.py  maintenance.py  matcher.py  migration.py  (+20 more)
scripts/: skills_adopt.sh  skills_diff.sh  skills_publish.sh  skills_ui.sh  smoke_test.py
templates/: paper.md.j2  papers.md.j2  project.md.j2  project_map.md.j2  prompts.md.j2  run_index.md.j2  topics.md.j2
tests/: test_autopilot.py  test_citations.py  test_cli.py  test_config.py  test_digests.py  test_discovery.py  test_gui.py  test_importer.py  test_labs_prompts.py  test_matcher.py  test_migration.py  test_models.py  test_obsidian_setup.py  test_queries_bases.py  test_render.py  test_self_improvement.py  test_semantic_lint_eval.py  test_skill_sync.py  (+1 more)
(+43 files in other folders)
